// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with all props 1`] = `
<a
  className="govuk-link lbh-link class1"
  href="/"
>
  Link
</a>
`;

exports[`renders with only required props 1`] = `
<a
  className="govuk-link lbh-link"
  href="/"
>
  Link
</a>
`;
